# ironsmith

./: .gitignore  Cargo.toml  DEFERRED.md  MECHANICS.md  PARSER.md  PLACEHOLDER_WORKFLOW.md  README.md  UNIMPLEMENTED.md  build.rs  rebuild-wasm.sh  semantic_false_positives.txt
crates/ironsmith-cli/: Cargo.toml
crates/ironsmith-tools/: Cargo.toml
scripts/: generate_baked_registry.py  semantic_false_positives.txt  stream_scryfall_blocks.py
src/: ability.rs  alternative_cast.rs  card.rs  color.rs  combat_state.rs  compiled_text.rs  condition_eval.rs  continuous.rs  cost.rs  decision.rs  dependency.rs  derived_view.rs  effect.rs  effect_text_shared.rs  event_processor.rs  executor.rs  filter.rs  game_loop.rs  game_state.rs  grant.rs  grant_registry.rs  ids.rs  lib.rs  main.rs  mana.rs  marker.rs  object.rs  object_query.rs  player.rs  prevention.rs  provenance.rs  replacement.rs  replacement_ability_processor.rs  resolution.rs  semantic_compare.rs  snapshot.rs  special_actions.rs  static_ability_processor.rs  tag.rs  target.rs  (+6 more)
src/cards/: builders.rs  handwritten_runtime.rs  mod.rs  parse_snapshots.rs
src/cards/builders/: ability_lowering.rs  card_ast.rs  cost_effects.rs  effect_ast_normalization.rs  effect_ast_traversal.rs  effect_pipeline.rs  parse_compile.rs  parse_parsing.rs  parse_support_effects_clauses_for_each.rs  parse_support_rule_engine.rs  parser.rs  reference_lowering.rs  reference_model.rs  reference_resolution.rs  static_ability_lowering.rs  tests.rs
src/cards/definitions/: accursed_duneyard.rs  accursed_marauder.rs  akromas_will.rs  amulet_of_vigor.rs  ancient_tomb.rs  arcane_signet.rs  arid_mesa.rs  ashnods_altar.rs  basic_forest.rs  basic_island.rs  basic_mountain.rs  basic_plains.rs  basic_swamp.rs  bastion_protector.rs  bello_bard_of_the_brambles.rs  black_market_connections.rs  blacksmiths_skill.rs  blade_of_the_bloodchief.rs  bleachbone_verge.rs  blood_artist.rs  blood_celebrant.rs  blood_moon.rs  bloodstained_mire.rs  boggart_brute.rs  bosh_iron_golem.rs  braids_arisen_nightmare.rs  breaking_entering.rs  brightclimb_pathway.rs  builder.rs  buried_alive.rs  butcher_ghoul.rs  cataclysm.rs  cataclysmic_gearhulk.rs  charismatic_conqueror.rs  chrome_mox.rs  command_the_mind.rs  command_tower.rs  counterspell.rs  crusade.rs  culling_the_weak.rs  (+113 more)
src/cards/parse_snapshots/: buried_alive.txt  cataclysm.txt  cataclysmic_gearhulk.txt  culling_the_weak.txt  village_rites.txt
src/cards/tokens/: clue_token.rs  gold_token.rs  junk_token.rs  lander_token.rs  map_token.rs  mod.rs  role_token.rs  shard_token.rs  treasure_token.rs
src/compiled_text/: merge_passes.rs  mod.rs  normalize_common.rs  normalize_post_pass.rs  oracle_style.rs  render_effects.rs  render_pipeline.rs
src/costs/: cost_effect.rs  counters.rs  discard.rs  effect.rs  energy.rs  exile.rs  life.rs  mana.rs  mill.rs  mod.rs  payer_trait.rs  processing_mode.rs  return_to_hand.rs  reveal.rs  sacrifice.rs  tap.rs  untap.rs
src/decisions/: context.rs  helpers.rs  make_decision.rs
src/decisions/specs/: objects.rs  options.rs  special.rs
src/effects/: executor_trait.rs  helpers.rs  mod.rs  restrictions.rs
src/effects/cards/: clash.rs  connive.rs  discard.rs  discard_hand.rs  draw_cards.rs  draw_for_each_tagged_matching.rs  exile_top.rs  imprint.rs  look_at_hand.rs  look_at_top.rs  mill.rs  mod.rs  reveal_from_hand.rs  reveal_tagged.rs  reveal_top.rs  scry.rs  search_library.rs  shuffle_graveyard_into_library.rs  shuffle_library.rs  surveil.rs
src/effects/combat/: enter_attacking.rs  fight.rs  goad.rs  grant_abilities_all.rs  grant_abilities_target.rs  melee.rs  mod.rs  modify_power_toughness.rs  modify_power_toughness_all.rs  modify_power_toughness_for_each.rs  prevent_all_combat_damage_from.rs  prevent_all_damage.rs  prevent_all_damage_to_target.rs  prevent_damage.rs  prevention_helpers.rs  remove_from_combat.rs  set_base_power_toughness.rs
src/effects/composition/: behold.rs  choose_mode.rs  choose_mode_runtime.rs  choose_objects.rs  choose_objects_runtime.rs  choose_spell_cast_history.rs  condition_eval.rs  conditional.rs  emit_keyword_action.rs  for_each_object.rs  for_each_tagged.rs  for_players.rs  if_effect.rs  may.rs  mechanic_actions.rs  mod.rs  reflexive_trigger.rs  repeat_process.rs  sequence.rs  tag_attached_to_source.rs  tag_triggering_damage_target.rs  tag_triggering_object.rs  tagged.rs  tagging_runtime.rs  target_metadata.rs  target_only.rs  unless_action.rs  unless_pays.rs  vote.rs  vote_runtime.rs  with_id.rs
src/effects/continuous/: apply_continuous.rs  mod.rs
src/effects/control/: exchange_control.rs  gain_control.rs  mod.rs
src/effects/counters/: for_each_counter_kind_put_or_remove.rs  mod.rs  move_all_counters.rs  move_counters.rs  proliferate.rs  put_counters.rs  remove_any_counters_among.rs  remove_any_counters_from_source.rs  remove_counters.rs  remove_up_to_any_counters.rs  remove_up_to_counters.rs
src/effects/damage/: clear_damage.rs  deal_damage.rs  deal_distributed_damage.rs  mod.rs  prevent_next_time_damage.rs  redirect_next_damage_to_target.rs  (+1 more)
src/events/: cause.rs  mod.rs  raw_event.rs  traits.rs
src/game_loop/: choose_player_tests.rs  combat_damage.rs  combat_decisions.rs  mod.rs  priority_apply.rs  priority_cast.rs  priority_core.rs  priority_mana.rs  priority_state.rs  saga.rs  sba_triggers.rs  stack_resolution.rs  targeting.rs  tests.rs  turn_execution.rs  types.rs
src/net/: adapters.rs  codec.rs  mod.rs  state.rs
src/rules/: combat.rs  damage.rs  state_based.rs
src/static_abilities/: characteristics.rs  combat.rs  continuous.rs  cost_modifiers.rs  id.rs  keywords.rs  misc.rs  mod.rs  protection.rs  restrictions.rs  text_utils.rs
src/targeting/: assignment.rs  computation.rs  mod.rs  ward.rs
src/tests/: inferno_support_tests.rs  integration_tests.rs  layer_system_tests.rs  mod.rs  test_helpers.rs
src/triggers/: check.rs  matcher_trait.rs  mod.rs
tests/: parser_smoke.rs  semantic_mismatch_regressions.rs  undo_action_chain.rs
web/ui/: .env.example  README.md  pnpm-lock.yaml  vite.config.js
web/wasm_demo/: index.html
(+464 files in other folders)
