[package]
name = "ironsmith"
version = "0.1.0"
edition = "2024"
autobins = false
autotests = false

[workspace]
members = ["crates/ironsmith-cli", "crates/ironsmith-tools"]
default-members = ["."]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
stacker = "0.1"
rand = "0.9.2"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "gzip", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["serialization", "engine-integration-tests", "parser-tests-full"]
serialization = ["dep:serde", "dep:serde_json"]
generated-registry = []
engine-integration-tests = []
parser-tests = []
parser-tests-full = ["parser-tests"]
tooling = ["serialization"]
wasm = [
    "serialization",
    "generated-registry",
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:getrandom",
    "dep:js-sys",
]

[[bin]]
name = "export_cedh_support_report"
path = "src/bin/export_cedh_support_report.rs"
required-features = ["tooling"]

[[test]]
name = "undo_action_chain"
path = "tests/undo_action_chain.rs"

[[test]]
name = "parser_architecture_guards"
path = "tests/parser_architecture_guards.rs"
required-features = ["parser-tests"]

[[test]]
name = "parser_diagnostics_rule_ids"
path = "tests/parser_diagnostics_rule_ids.rs"
required-features = ["parser-tests"]

[[test]]
name = "parser_smoke"
path = "tests/parser_smoke.rs"
required-features = ["parser-tests"]

[[test]]
name = "semantic_mismatch_regressions"
path = "tests/semantic_mismatch_regressions.rs"
required-features = ["parser-tests-full"]
